--- a/templates/home.html
+++ b/templates/home.html
@@ -21,11 +21,11 @@
         {% for x in range(8) %}
           <div class="row mb-3">
             <div class="col-4 themed-grid-col">
-              <a class="btn btn-{{ get_class_name() }}" id="{{ col(site_id) }}" href="{{ get_href() }}" role="button">#{{ add_col(site_id) }}</a>
-              <a class="btn btn-{{ get_class_name() }}" id="{{ col(site_id) }}" href="{{ get_href() }}" role="button">#{{ add_col(site_id) }}</a></div>
+              <a class="btn btn-{{ get_class_name(site_id) }}" id="{{ col(site_id) }}" href="{{ get_href(site_id) }}" role="button">#{{ add_col(site_id) }}</a>
+              <a class="btn btn-{{ get_class_name(site_id) }}" id="{{ col(site_id) }}" href="{{ get_href(site_id) }}" role="button">#{{ add_col(site_id) }}</a></div>
             <div class="col-4 themed-grid-col">
-              <a class="btn btn-{{ get_class_name() }}" id="{{ col(site_id) }}" href="{{ get_href() }}" role="button">#{{ add_col(site_id) }}</a>
-              <a class="btn btn-{{ get_class_name() }}" id="{{ col(site_id) }}" href="{{ get_href() }}" role="button">#{{ add_col(site_id) }}</a>
+              <a class="btn btn-{{ get_class_name(site_id) }}" id="{{ col(site_id) }}" href="{{ get_href(site_id) }}" role="button">#{{ add_col(site_id) }}</a>
+              <a class="btn btn-{{ get_class_name(site_id) }}" id="{{ col(site_id) }}" href="{{ get_href(site_id) }}" role="button">#{{ add_col(site_id) }}</a>
             </div>
           </div>
         {% endfor %}
