--- a/templates/base.html
+++ b/templates/base.html
@@ -68,10 +68,14 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/reset">Reset</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/restart">Restart</a>
+                </li>
               {% endif %}
             </ul>
           </div>
         </nav>
+        
     {% block content %}
 
     {% endblock %}
