--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
 </div>
     </div>
     <script type="text/javascript">
-      var myModal = new bootstrap.Modal(document.getElementById('myModal'), options)
+      var myModal = new bootstrap.Modal(document.getElementById('myModal'))
       function changeClassRed(id) {
         var doc = document.getElementById(id);
         doc.className = "btn btn-danger";
