--- a/templates/home.html
+++ b/templates/home.html
@@ -43,6 +43,9 @@
         {% endfor %}
       {% endif %}
     </div>
+    <div class="d-grid gap-2 col-6 mx-auto">
+      <a class="btn btn-primary" href="/remove_admin">Remove Admin</a>
+    </div>
     <script type="text/javascript">
       function changeClassRed(id) {
         var doc = document.getElementById(id);
