--- a/templates/home.html
+++ b/templates/home.html
@@ -43,9 +43,11 @@
         {% endfor %}
       {% endif %}
     </div>
-    <div class="d-grid gap-2 col-6 mx-auto">
-      <a class="btn btn-primary" href="/remove_admin">Remove Admin</a>
-    </div>
+    {% if has_admin %}
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <a class="btn btn-primary" href="/remove_admin">Remove Admin</a>
+      </div>
+    {% endif %}
     <script type="text/javascript">
       function changeClassRed(id) {
         var doc = document.getElementById(id);
