--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,11 @@
         <!-- Custom styles for this template -->
         <link href="https://getbootstrap.com/docs/5.0/examples/grid/grid.css" rel="stylesheet">
         <style>
+          :root {
+            background-color: #2d2c2d
+          }
+        </style>
+        <style>
           .themed-grid-col {
             padding-top: .0rem;
             padding-bottom: .0rem;
