--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,7 @@
             margin-left: auto;
             margin-right: auto;
             margin: 0px;
+            background-color: #2d2c2d
             
           }
         </style>
