--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
           }
           .themed-container {
             padding: .0rem;
+            background-color: #2d2c2d
           }
           .container {
             text-align: center;
