--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,9 @@
             margin-right: auto;
             margin: 0px;
             background-color: #2d2c2d
-            
+          }
+          .navbar navbar-expand-lg {
+            background-color: #2d2c2d
           }
         </style>
 	      <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
