--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,13 @@
             margin: 0px;
             background-color: #2d2c2d
           }
-          .navbar navbar-expand-lg {
+          .navbar {
+            background-color: #2d2c2d
+          }
+          .navbar-nav {
+            background-color: #2d2c2d
+          }
+          .container-fluid {
             background-color: #2d2c2d
           }
         </style>
