--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
         <link href="https://getbootstrap.com/docs/5.0/examples/grid/grid.css" rel="stylesheet">
         <style>
           :root {
-            background-color: #2d2c2d
+            background-color: #2d2c2d;
           }
         </style>
         <style>
@@ -47,7 +47,7 @@
           }
           .themed-container {
             padding: .0rem;
-            background-color: #2d2c2d
+            background-color: #2d2c2d;
           }
           .container {
             text-align: center;
@@ -61,16 +61,10 @@
             margin-left: auto;
             margin-right: auto;
             margin: 0px;
-            background-color: #2d2c2d
+            background-color: #2d2c2d;
           }
-          .navbar {
-            background-color: #2d2c2d
-          }
-          .navbar-nav {
-            background-color: #2d2c2d
-          }
-          .container-fluid {
-            background-color: #2d2c2d
+          .row {
+            background-color: #2d2c2d;
           }
         </style>
 	      <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
