--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,9 @@
           .row {
             background-color: #2d2c2d;
           }
+          .body {
+            background-color: #2d2c2d;
+          }
         </style>
 	      <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
           <div class="container-fluid">
