--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
           .row {
             background-color: #2d2c2d;
           }
-          .body {
+          body {
             background-color: #2d2c2d;
           }
         </style>
