--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,10 @@
       margin-right: auto;
       text-align: center;
     }
-    .btn-primary {
+    .btn-outline-primary {
       font-size: 75%;
     }
-    .btn-danger {
+    .btn-outline-danger {
       font-size: 75%;
     }
   </style>
