--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,21 @@
           :root {
             background-color: #2d2c2d;
           }
+          .themed-container {
+            background-color: #2d2c2d;
+          }
+          .container {
+            background-color: #2d2c2d;
+          }
+          .themed-container {
+            background-color: #2d2c2d;
+          }
+          .row {
+            background-color: #2d2c2d;
+          }
+          body {
+            background-color: #2d2c2d;
+          }
         </style>
         <style>
           .themed-grid-col {
@@ -47,7 +62,6 @@
           }
           .themed-container {
             padding: .0rem;
-            background-color: #2d2c2d;
           }
           .container {
             text-align: center;
@@ -61,13 +75,6 @@
             margin-left: auto;
             margin-right: auto;
             margin: 0px;
-            background-color: #2d2c2d;
-          }
-          .row {
-            background-color: #2d2c2d;
-          }
-          body {
-            background-color: #2d2c2d;
           }
         </style>
 	      <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
