--- a/templates/base.html
+++ b/templates/base.html
@@ -32,26 +32,28 @@
 
         <!-- Custom styles for this template -->
         <link href="https://getbootstrap.com/docs/5.0/examples/grid/grid.css" rel="stylesheet">
-        <style>
-          :root {
-            background-color: #2d2c2d;
-          }
-          .themed-container {
-            background-color: #2d2c2d;
-          }
-          .container {
-            background-color: #2d2c2d;
-          }
-          .themed-container {
-            background-color: #2d2c2d;
-          }
-          .row {
-            background-color: #2d2c2d;
-          }
-          body {
-            background-color: #2d2c2d;
-          }
-        </style>
+        {% if darkmode %}
+          <style>
+            :root {
+              background-color: #2d2c2d;
+            }
+            .themed-container {
+              background-color: #2d2c2d;
+            }
+            .container {
+              background-color: #2d2c2d;
+            }
+            .themed-container {
+              background-color: #2d2c2d;
+            }
+            .row {
+              background-color: #2d2c2d;
+            }
+            body {
+              background-color: #2d2c2d;
+            }
+          </style>
+        {% endif %}
         <style>
           .themed-grid-col {
             padding-top: .0rem;
