--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,12 @@
     .btn-outline-danger {
       font-size: 75%;
     }
+    .btn-primary {
+      font-size: 75%;
+    }
+    .btn-danger {
+      font-size: 75%;
+    }
   </style>
   <body>
     <br/>
