--- a/templates/home.html
+++ b/templates/home.html
@@ -49,9 +49,18 @@
         {% endfor %}
       {% endif %}
     </div>
+    {% if darkmode %}
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <a class="btn btn-outline-primary" href="/lightmode">Change to light theme</a>
+      </div>
+    {% else %}
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <a class="btn btn-primary" href="/darkmode">Change to dark theme</a>
+      </div>
+    {% endif %}
     {% if has_admin %}
       <div class="d-grid gap-2 col-6 mx-auto">
-        <a class="btn btn-outline-primary" href="/remove_admin">Remove Admin</a>
+        <a class="btn btn{{ get_outline(darkmode) }}-primary" href="/remove_admin">Remove Admin</a>
       </div>
     {% endif %}
     <script type="text/javascript">
