--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.83.1">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/grid/">
-
+      <title>Firework Automation</title>
 
 
         <!-- Bootstrap core CSS -->
