--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
             }
             .container {
               background-color: #2d2c2d;
+              text-align: center;
             }
             .themed-container {
               background-color: #2d2c2d;
