--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
   </style>
   <body>
     <br/>
-    <div class="container">
+    <div class="container" style="text-align:center">
       {% if has_admin %}
         {% for x in range(8) %}
           <div class="row mb-3">
