--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,13 @@
             margin-left: auto;
             text-align: center;
             margin-right: auto;
+            background-color: rgba(86, 61, 124, 0);
+            border: 1px solid rgba(86, 61, 124, 0);
           }
           .themed-container {
             padding: .0rem;
+            background-color: rgba(0, 123, 255, 0);
+            border: 1px solid rgba(0, 123, 255, 0);
           }
           .container {
             text-align: center;
