--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,9 @@
     .btn-outline-danger {
       font-size: 75%;
     }
+    .mx-auto {
+      max-width: 360px;
+    }
     .btn-primary {
       font-size: 75%;
     }
