--- a/templates/home.html
+++ b/templates/home.html
@@ -64,6 +64,10 @@
       </div>
     {% endif %}
     <br/>
+    <div class="d-grid gap-2 col-6 mx-auto">
+      <a class="btn btn-primary" href="/custom_css">Add custom CSS code</a>
+    </div>
+    <br/>
     {% if has_admin %}
       <div class="d-grid gap-2 col-6 mx-auto">
         <a class="btn btn{{ get_outline(darkmode) }}-primary" href="/remove_admin">Remove Admin</a>
