--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
     {% endif %}
     <br/>
     <div class="d-grid gap-2 col-6 mx-auto">
-      <a class="btn btn-primary" href="/custom_css">Add custom CSS code</a>
+      <a class="btn btn{{ get_outline(darkmode) }}-primary" href="/customcss">Add custom CSS code</a>
     </div>
     <br/>
     {% if has_admin %}
