--- a/templates/custom_css.html
+++ b/templates/custom_css.html
@@ -11,12 +11,12 @@
         .form-control {
             background-color: #2d2c2d;
             color: white;
-            border-radius: 0px;
+            border: 0px;
         }
-        .form-control:hover {
+        .form-control::selection {
             background-color: #3e3d3e;
             color: white;
-            border-radius: 0px;
+            border: 0px;
         }
     </style>
 {% endif %}
