Fix textarea css

--- a/templates/custom_css.html
+++ b/templates/custom_css.html
@@ -11,9 +11,15 @@
         .form-control {
             background-color: #2d2c2d;
             color: white;
-            border: 0px;
+            border: 1px;
+            border-color: #3e3d3e;
         }
         .form-control::selection {
+            background-color: #3e3d3e;
+            color: white;
+            border: 0px;
+        }
+        .form-control::-moz-selection {
             background-color: #3e3d3e;
             color: white;
             border: 0px;
