--- a/templates/custom_css.html
+++ b/templates/custom_css.html
@@ -8,27 +8,15 @@
         .body {
             padding: 10px;
         }
-        .form-control {
-            background-color: #2d2c2d;
-            color: white;
-            border: 1px;
-            border-color: #3e3d3e;
-        }
-        .form-control::selection {
-            background-color: #3e3d3e;
-            color: white;
-            border: 0px;
-        }
-        .form-control::-moz-selection {
-            background-color: #3e3d3e;
-            color: white;
-            border: 0px;
-        }
+        
     </style>
 {% endif %}
 <div class="body">
-    <h4>Please enter css below:</h4>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+    <h4>Please enter css file below or use a theme:</h4>
+    <div class="input-group mb-3">
+        <label class="input-group-text" for="css_file_upload">Choose File</label>
+        <input type="file" class="form-control" id="css_file_upload">
+      </div>
     <br/>
     <button class="btn btn{{ get_outline(darkmode) }}-primary">Upload & Save</button>
 </div>
