--- a/templates/home.html
+++ b/templates/home.html
@@ -54,19 +54,14 @@
         {% endif %}
       </div>
     </center>
-    {% if darkmode %}
-      <div class="d-grid gap-2 col-6 mx-auto">
-        <a class="btn btn-outline-primary" href="/lightmode">Change to light theme</a>
-      </div>
-    {% else %}
-      <div class="d-grid gap-2 col-6 mx-auto">
-        <a class="btn btn-primary" href="/darkmode">Change to dark theme</a>
-      </div>
-    {% endif %}
+    <div class="d-grid gap-2 col-6 mx-auto">
+      <a class="btn btn{{ get_outline(darkmode) }}-primary" href="/themes">Change theme</a>
+    </div>
     <br/>
     {% if has_admin %}
       <div class="d-grid gap-2 col-6 mx-auto">
         <a class="btn btn{{ get_outline(darkmode) }}-primary" href="/remove_admin">Remove Admin</a>
+        <h3>Theme: {{ theme }}</h3>
       </div>
     {% endif %}
     <br/>
