--- a/templates/base.html
+++ b/templates/base.html
@@ -28,29 +28,7 @@
 
 
         <link href="https://getbootstrap.com/docs/5.0/examples/grid/grid.css" rel="stylesheet">
-        {% if darkmode %}
-          <style>
-            :root {
-              background-color: #2d2c2d;
-            }
-            .themed-container {
-              background-color: #2d2c2d;
-            }
-            .container {
-              background-color: #2d2c2d;
-              text-align: center;
-            }
-            .themed-container {
-              background-color: #2d2c2d;
-            }
-            .row {
-              background-color: #2d2c2d;
-            }
-            body {
-              background-color: #2d2c2d;
-            }
-          </style>
-        {% endif %}
+        <link href="{{ get_theme_link(theme) }}" rel="stylesheet">
         <style>
           .themed-grid-col {
             padding-top: .0rem;
