Change dark red theme

--- a/static/themes/dark_red.css
+++ b/static/themes/dark_red.css
@@ -1,21 +1,21 @@
 :root {
-  background-color: #7c0800;
+  background-color: #440400;
 }
 .themed-container {
-  background-color: #7c0800;
+  background-color: #440400;
 }
 .container {
-  background-color: #7c0800;
+  background-color: #440400;
   text-align: center;
 }
 .themed-container {
-  background-color: #7c0800;
+  background-color: #440400;
 }
 .row {
-  background-color: #7c0800;
+  background-color: #440400;
 }
 body {
-  background-color: #7c0800;
+  background-color: #440400;
 }
 p {
   color: white;
