--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.83.1">
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/grid/">
       <title>Firework Automation</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="/static/bootstrap.css" rel="stylesheet">
         <style>
           .bd-placeholder-img {
             font-size: 1.125rem;
@@ -27,7 +25,7 @@
         </style>
 
 
-        <link href="https://getbootstrap.com/docs/5.0/examples/grid/grid.css" rel="stylesheet">
+        <link href="/static/grid.css" rel="stylesheet">
         <link href="{{ get_theme_link(theme) }}" rel="stylesheet">
         <style>
           .themed-grid-col {
@@ -70,7 +68,7 @@
             </ul>
           </div>
         </nav>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="/static/bootstrap.js"></script>
     {% block content %}
 
     {% endblock %}
