--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,17 @@
-.firework_buttons {
-    display: flex;
+body {
+    margin: 0;
 }
-.button {
-    padding: 
+
+.firework_button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #177bed;
+    border-radius: 5px;
+    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
