--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="/static/css/main.css" rel="stylesheet">
+    <title>Firework Launcher</title>
   </head>
   <body>
     <ul class="navbar">
