--- a/templates/themes.html
+++ b/templates/themes.html
@@ -1,1 +1,16 @@
-<p>Theme: {{ theme }}</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <link href="/static/css/main.css" rel="stylesheet">
+        <title>Firework Launcher - Themes
+        </title>
+    </head>
+    <body>
+        <ul class="navbar">
+            <li class="navbar-item-li"><a class="navbar-item navtitle" href="/">Firework Launcher</a></li>
+            <li class="navbar-item-li"><a class="navbar-item" href="/themes">Themes</a></li>
+        </ul>
+        <p class="current_theme">Current Theme: {{ theme }}</p>
+    </body>
+</html>
