--- a/templates/themes.html
+++ b/templates/themes.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link href="/static/css/main.css" rel="stylesheet">
+        <link href="{{ get_theme_link(theme) }}" rel="stylesheet">
         <title>Firework Launcher - Themes
         </title>
     </head>
@@ -11,6 +12,10 @@
             <li class="navbar-item-li"><a class="navbar-item navtitle" href="/">Firework Launcher</a></li>
             <li class="navbar-item-li"><a class="navbar-item" href="/themes">Themes</a></li>
         </ul>
-        <p class="current_theme">Current Theme: {{ theme }}</p>
+        <div class="themebuttons">
+            <p class="current_theme">Current Theme: {{ theme }}</p>
+            <a class="themebutton" href="/theme/light">Light</a>
+            <a class="themebutton" href="/theme/dark">Dark</a>
+        </div>
     </body>
 </html>
