--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,9 @@
       {% endif %}
     </ul>
     <div class="firework_buttons" id="firework_buttons"></div>
+    <div class="legend" id="legend">
+      <h2>Legend</h2>
+    </div>
     <script>
       var theme = "{{ theme }}";
       var rows = parseInt("{{ rows }}");
