--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,14 @@ h5 {
     transition: opacity 0.5s;
 }
 
+.legend {
+    text-align: center;
+}
+
+.legend-txt {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .remove {
     opacity: 0;
 }
