--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,7 +76,12 @@ h5 {
     padding: 14px 16px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+}
 
+@media screen and (max-width: 480px) {
+    .navbar-item {
+        font-size: 13px;
+    }
 }
 
 .navtitle {
@@ -112,4 +117,27 @@ h5 {
 }
 .themebuttons {
     text-align: center;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    
 }
