--- a/static/css/main.css
+++ b/static/css/main.css
@@ -115,6 +115,20 @@ h5 {
     margin: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.resetbutton {
+    border: 2px solid #ff2667;
+    color: #ff2667;
+    padding: 15px 27px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .themebuttons {
     text-align: center;
 }
