--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <ul class="navbar">
-      <li class="navbar-item-li"><p class="navbar-item navtitle">Firework Launcher</p></li>
-      <li class="navbar-item-li"><a class="navbar-item" href="/themes">Themes</a></li>
+      {% if not admin %}
+        <li class="navbar-item-li"><p class="navbar-item navtitle">Firework Launcher</p></li>
+      {% endif %}
+        <li class="navbar-item-li"><a class="navbar-item" href="/themes">Themes</a></li>
       {% if admin %}
         <li class="navbar-item-li"><a class="navbar-item" onclick="dev(rows);" id="devbutton">Dev</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="devbutton">Reset all</a></li>
