--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
       {% endif %}
         <li class="navbar-item-li"><a class="navbar-item" href="/themes">Themes</a></li>
       {% if admin %}
-        <li class="navbar-item-li"><a class="navbar-item" onclick="dev(rows);" id="devbutton">Dev</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" onclick="dev();" id="devbutton">Dev</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="devbutton">Reset all</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
       {% endif %}
