--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,10 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+label {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
