--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
         <li class="navbar-item-li"><a class="navbar-item" onclick="dev();" id="devbutton">Dev</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="devbutton">Reset all</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" href="/lfa">LFA</a></li>
       {% endif %}
     </ul>
     {% for launcher in launchers %}
