Add support for selecting an amount of channels

--- a/templates/add_launcher.html
+++ b/templates/add_launcher.html
@@ -23,6 +23,8 @@
         <input name="launcher_name" type="text">
         <p>Serial Port/IP</p>
         <input name="serial_port" type="text">
+        <p>Channel Count</p>
+        <input name="count" type="text">
         <br/>
         <button type="submit" class="themebutton">Add</button>
       </form>
