--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,8 @@
       var fireworks_launched = JSON.parse('{{ fireworks_launched | safe }}');;
       var admin = "{{ admin }}";
       var firework_profiles = JSON.parse('{{ firework_profiles | safe }}');
-      var launchers = "{{ launchers_parsed }}".split(":")
+      var launchers = "{{ launchers_parsed }}".split(":");
+      var launcher_counts = JSON.parse('{{ launcher_counts | safe }}');
     </script>
     <script src="/static/js/socketio.js"></script>
     <script src="/static/js/main.js"></script>
