--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,33 +1,47 @@
+:root {
+    --fg: #ffffff;
+    --bg: #303030;
+    --font: Arial, Helvetica, sans-serif;
+}
+
 body {
     margin: 0;
+    background-color: var(--bg);
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 label {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 h3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 h4 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 h5 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    color: var(--fg);
 }
 
 .firework_buttons {
@@ -45,7 +59,7 @@ h5 {
     background-color: #177bed;
     border-radius: 5px;
     margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
     transition: opacity 0.5s;
 }
 
@@ -54,7 +68,7 @@ h5 {
 }
 
 .legend-txt {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
 }
 
 .remove {
@@ -79,7 +93,7 @@ h5 {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
 }
 
 .hamburger-menu {
@@ -88,7 +102,7 @@ h5 {
     text-align: right;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
 }
 
 .navtitle {
@@ -99,7 +113,7 @@ h5 {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
 }
 
 #hamburgerExpandMenu {
@@ -112,7 +126,7 @@ h5 {
     color: white;
     padding: 10px 16px;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
 }
 
 @media screen and (max-width: 640px) {
@@ -149,17 +163,17 @@ h5 {
 }
 
 .themebutton {
-    border: none;
-    color: white;
     padding: 15px 27px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    background-color: #177bed;
     border-radius: 5px;
     margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
+    background-color: rgba(0, 0, 0, 0);
+    color: #177bed;
+    border: 2px solid #177bed;
 }
 
 .resetbutton {
@@ -172,32 +186,16 @@ h5 {
     font-size: 16px;
     border-radius: 5px;
     margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font);
 }
 
 .themebuttons {
     text-align: center;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+.firework_button {
+    background-color: rgba(0, 0, 0, 0);
+    color: #177bed;
+    border: 2px solid #177bed;
 }
 
-.modal-content {
-    position: absolute;
-    margin: 0;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
-    
-}
