Add support for running and managing built in patterns

--- a/templates/add_launcher.html
+++ b/templates/add_launcher.html
@@ -9,6 +9,7 @@
     <ul class="navbar">
         <li class="navbar-item-li"><a class="navbar-item navtitle" href="/">Firework Launcher</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Patterns</a></li>
       </ul>
       {% if error %}
         <p class="error">Launcher does not exist</p>
