--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
         <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="devbutton">Reset all</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/lfa">LFA</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" href="/patterns">Patterns</a></li>
       {% endif %}
       <li class="navbar-item-hamburger"><a class="hamburger-menu" onclick="expand_hamburger()"><img src="/static/svgs/bars.svg" width="20" class="hamburger-menu-svg" alt="Hamburger Menu"/></a></li>
     </ul>
@@ -22,6 +23,7 @@
         <a class="navbar-item-expanded" onclick="reset_all()" id="devbutton">Reset all</a>
         <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
         <a class="navbar-item-expanded" href="/lfa">LFA</a>
+        <a class="navbar-item-expanded" href="/patterns">Patterns</a>
       {% endif %}
     </div>
     
