Add pattern builder

--- a/templates/patterns.html
+++ b/templates/patterns.html
@@ -20,6 +20,7 @@
                     </h1><br/>
                 </div>
             {% endfor %}
+            <a class="firework_button" href="/patterns/add">Add Pattern</a>
         </div>
         <script src="/static/js/socketio.js"></script>
         <script src="/static/js/patterns.js"></script>
