--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
     </ul>
     <div id="hamburgerExpandMenu">
       {% if admin %}
-        <a class="navbar-item-expanded" onclick="dev();" id="devbutton">Dev</a>
+        <a class="navbar-item-expanded" onclick="dev();" id="devbutton_">Dev</a>
         <a class="navbar-item-expanded" onclick="reset_all()" id="devbutton">Reset all</a>
         <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
         <a class="navbar-item-expanded" href="/lfa">LFA</a>
