--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,8 @@
     <ul class="navbar">
       <li class="navbar-item-li"><a class="navtitle" href="/">Firework Launcher</a></li>
         <li class="navbar-item-li"><a class="navbar-item" onclick="dev();" id="devbutton">Dev</a></li>
-        <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="devbutton">Reset all</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" onclick="reset_all()" id="resetbutton">Reset all</a></li>
+        <li class="navbar-item-li"><a class="navbar-item" href="/notes">Notes</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/add_launcher">Add launcher</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/lfa">LFA</a></li>
         <li class="navbar-item-li"><a class="navbar-item" href="/patterns">Patterns</a></li>
@@ -18,6 +19,7 @@
     <div id="hamburgerExpandMenu">
         <a class="navbar-item-expanded" onclick="dev();" id="devbutton_">Dev</a>
         <a class="navbar-item-expanded" onclick="reset_all()" id="devbutton">Reset all</a>
+        <a class="navbar-item-expanded" href="/notes">Notes</a>
         <a class="navbar-item-expanded" href="/add_launcher">Add launcher</a>
         <a class="navbar-item-expanded" href="/lfa">LFA</a>
         <a class="navbar-item-expanded" href="/patterns">Patterns</a>
@@ -37,6 +39,7 @@
       var firework_profiles = JSON.parse('{{ firework_profiles | safe }}');
       var launchers = "{{ launchers_parsed }}".split(":");
       var launcher_counts = JSON.parse('{{ launcher_counts | safe }}');
+      var notes = JSON.parse('{{ notes | safe }}');
     </script>
     <script src="/static/js/socketio.js"></script>
     <script src="/static/js/main.js"></script>
